# EmailNewsletter

./: Cargo.toml  Dockerfile  README.md
.github/: general.yml
.github/workflows/: general.yml
.sqlx/: query-13d4b21cea65d8648f469504fbfd1456fa2bad53bd3f8fa749c42d31f1e6ef18.json  query-3ec83b2ab415542f2c4aca41e23b07d34b15ec51d5eea125297cd0f257a720aa.json  query-6a64d566bf475b7193c1bfcc8c56a7608ebf1c784c879c84c296e9833f0b08c9.json  query-d51e223d66d531dc04c7112954491ddc4a510b231b3e326b1f22c93ea14d369e.json
configuration/: base.yaml  production.yaml
migrations/: 20241005111910_seed_user.sql  20241012141559_create_newsletter_issues_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/login/: get.rs  login.html  post.rs
src/routes/newsletters/: get.rs  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
