[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.210", features = ["derive"] }
config = { git = "https://github.com/mehcode/config-rs.git", branch = "master"}
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.13"
unicode-segmentation = "1.12.0"
validator = "0.18.1"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.64"
anyhow = "1.0.89"
argon2 = { version = "0.5.3", features = ["std"] }
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
serde_json = "1.0.128"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12.8"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
claims = "0.7.1"
fake = "2.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
wiremock = "0.6"
serde_json = "1.0.128"
linkify = "0.10.0"
